[package]
name = "zed-nrepl-client"
version = "0.0.1"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zed-nrepl-client"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
# gpui = { path = "../zed/crates/gpui" }
unicode-segmentation = "1.11.0"
rust-embed = "8.2.0"
serde_json = "1.0.111"
anyhow = "1"
libc = "0.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_bencode = "0.2"
uuid = { version = "1.0", features = ["v4"] }
